# Calango-Engine

./: README.md
src/: CMakeLists.txt  calango_engine.cpp  calango_launcher.cpp
src/include/calango/: calango_platform.h
src/win64/: calango_platform_win64.cpp  calango_resource_win64.h  calango_resource_win64.rc
